--- a/alta_proveedores/templates/base.html
+++ b/alta_proveedores/templates/base.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <title>Proveedores</title>
 </head>
+
 <body>
 
-    <nav>
-        <ul>
-            <!-- Si el usuario está autenticado, mostramos las siguientes opciones -->
-            {% if user.is_authenticated %}
-            <li>
-                <a href="/">Inicio</a>
-            </li>
-            <li>
-                <a href="/proveedores">Proveedores</a>
-            </li>
-            <li>
-                <a href="/proveedores/crear">Registrar proveedor</a>
-            </li>
-            <li>
-                <a href="/signout">Cerrar sesión</a>
-            </li>
-            <!-- Si no, solo mostramos las opciones "Iniciar sesión" y "Crear cuenta" -->
-            {% else %}
-            <li>
-                <a href="/signin">Iniciar sesión</a>
-            </li>
-            <li>
-                <a href="/signup">Crear cuenta</a>
-            </li>
-            {% endif %}
-            
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Ricofarms</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <!-- Si el usuario está autenticado, mostramos las siguientes opciones -->
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/proveedores">Proveedores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/proveedores/crear">Registrar proveedor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/signout">Cerrar sesión</a>
+                    </li>
+                    <!-- Si no, solo mostramos las opciones "Iniciar sesión" y "Crear cuenta" -->
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/signin">Iniciar sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/signup">Crear cuenta</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
     </nav>
 
     {% block content %}
     {% endblock %}
 
 </body>
+
 </html>
