--- a/alta_proveedores/templates/proveedor/proveedor_create.html
+++ b/alta_proveedores/templates/proveedor/proveedor_create.html
@@ -2,16 +2,26 @@
 
 {% block content %}
 
-<h1>Crear proveedor</h1>
+<main class="container py-5">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6 align-self-center mx-auto">
+            <form class="card card-body" method="POST" enctype="multipart/form-data">
 
-{{error}}
+                <h1>Crear proveedor</h1>
 
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button>
-        Guardar
-    </button>
-</form>
+                {{error}}
+
+                {% csrf_token %}
+
+                {{ form.as_p }}
+
+                <button class="btn btn-primary">
+                    Guardar
+                </button>
+                
+            </form>
+        </div>
+    </div>
+</main>
 
 {% endblock %}
