--- a/alta_proveedores/templates/proveedor/proveedor_detail.html
+++ b/alta_proveedores/templates/proveedor/proveedor_detail.html
@@ -1,20 +1,32 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Detalle del proveedor</h1>
 
-<h2>{{proveedor.nombre_comercial}}</h2>
+<main class="container py-5">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6 align-self-center mx-auto">
+            <form class="card card-body" method="POST">
 
-<form method="POST">
+                <h1>Detalle del proveedor</h1>
 
-    {% csrf_token %}
+                <h2>{{proveedor.nombre_comercial}}</h2>
 
-    {{form.as_p}}
+                {% csrf_token %}
 
-    <button>
-        Actualizar
-    </button>
+                {{form.as_p}}
 
-</form>
+                <a href="/{{proveedor.constancia_situacion_fiscal}}" target="_blank"
+                    style="display: block;margin: 10px 0;">Descargar constancia de situación fiscal</a>
+                <a href="/{{proveedor.estado_cuenta_bancario}}" target="_blank"
+                    style="display: block;margin: 10px 0;">Descargar estado de cuenta bancario</a>
+
+                <button class="btn btn-primary" style="margin: 10px 0;">
+                    Actualizar
+                </button>
+
+            </form>
+        </div>
+    </div>
+</main>
 
 {% endblock %}
