--- a/alta_proveedores/templates/base.html
+++ b/alta_proveedores/templates/base.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Ricofarms</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
