--- a/alta_proveedores/templates/home.html
+++ b/alta_proveedores/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<main class="container py-5">
+<main class="container py-5 mt-5">
 
     <section class="card card-body">
 
