--- a/alta_proveedores/templates/proveedor/proveedor_create.html
+++ b/alta_proveedores/templates/proveedor/proveedor_create.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-<main class="container py-5">
+<main class="container py-5 mt-5">
     <div class="row d-flex justify-content-center">
         <div class="col-md-6 align-self-center mx-auto">
             <form class="card card-body" method="POST" enctype="multipart/form-data">
 
-                <h1>Crear proveedor</h1>
+                <h1 class="mb-4">Registrar proveedor</h1>
 
                 {{error}}
 
