--- a/alta_proveedores/templates/signup.html
+++ b/alta_proveedores/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<main class="container py-5">
+<main class="container py-5 mt-5">
 
     <div class="row d-flex justify-content-center">
 
