Materiales view working

--- a/alta_proveedores/templates/base.html
+++ b/alta_proveedores/templates/base.html
@@ -29,7 +29,7 @@
                         <a class="nav-link active" aria-current="page" href="/proveedores">Proveedores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/proveedores/crear">Registrar proveedor</a>
+                        <a class="nav-link active" aria-current="page" href="/materiales">Materiales</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/signout">Cerrar sesión</a>
