--- a/alta_proveedores/templates/home.html
+++ b/alta_proveedores/templates/home.html
@@ -8,29 +8,13 @@
 
         <h1 class="text-center display-5 py-3">Alta de proveedores, clientes y materiales</h1>
 
-        <p>Seleccione una de las siguientes opciones para ver sus solicitudes pendientes de aprobar.</p>
+        <p class="mt-3">Seleccione la siguiente opción para crear una nueva solicitud de alta de proveedor.</p>
 
-        <div class="text-center py-3">
-            
-            <a class="btn btn-primary" href="proveedores">Proveedores</a>
-            
-            <a class="btn btn-primary" href="">Clientes</a>
-            
-            <a class="btn btn-primary" href="">Materiales</a>
+        <a class="btn btn-primary" href="proveedores/crear">Crear proveedor</a>
 
-        </div>
+        <p class="mt-3">Seleccione la siguiente opción para crear una nueva solicitud de alta de material.</p>
 
-        <p>Seleccione una de las siguientes opciones para solicitar un alta de proveedor, cliente o material.</p>
-
-        <div class="text-center">
-            
-            <a class="btn btn-primary" href="proveedores/crear">Proveedores</a>
-            
-            <a class="btn btn-primary" href="">Clientes</a>
-            
-            <a class="btn btn-primary" href="">Materiales</a>
-
-        </div>
+        <a class="btn btn-primary" href="materiales/crear">Crear material</a>
 
     </section>
 
